--- a/build.gradle
+++ b/build.gradle
@@ -23,13 +23,17 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springdoc:springdoc-openapi-ui:1.6.9'
+	// https://mvnrepository.com/artifact/com.auth0/java-jwt
+	implementation group: 'com.auth0', name: 'java-jwt', version: '4.0.0'
+
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'com.h2database:h2'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	testImplementation 'org.springframework.security:spring-security-test'
+//	testImplementation 'org.springframework.security:spring-security-test'
 }
 
 tasks.named('test') {
@@ -68,6 +72,9 @@ sonarqube {
 		property 'sonar.projectKey', 'az-farecard-service'
 		property 'sonar.host.url', 'http://192.168.1.21:9000'
 		property "sonar.exclusions", "**/com/az/farecard/dto/**, **/com/az/farecard/entity/**, **/com/az/farecard/exception/**,	**/com/az/farecard/repository/**, **/com/az/farecard/AzFareCardApplication.java"
+		property "sonar.issue.ignore.multicriteria", "e1"
+		property "sonar.issue.ignore.multicriteria.e1.resourceKey", "src/test/java/**/*"
+		property "sonar.issue.ignore.multicriteria.e1.ruleKey", "*"
 		//property 'sonar.login', 'sqp_eca0ff40a200f3f41e9eb1a176a8a050389f069d'
 	}
 }
